@@ -16,6 +16,8 @@ lightdm_gtk_greeter_SOURCES = \
 	lightdm-gtk-greeter.c
 
 lightdm_gtk_greeter_CFLAGS = \
+	-DGETTEXT_PACKAGE=\"$(GETTEXT_PACKAGE)\" \
+	-DLOCALEDIR=\""$(localedir)"\" \
 	-DGREETER_DATA_DIR=\""$(greeterdatadir)"\" \
 	-DCONFIG_FILE=\""$(configdir)/lightdm-gtk-greeter.conf"\" \
 	-I$(top_srcdir)/liblightdm-gobject \
